home page added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,60 @@
 		/>
 	</head>
 	<body class="d-flex flex-column">
-		<h1>HELLO</h1>
+		<main>
+			<!-- Navigation-->
+			<nav
+				class="navbar shadow-sm sticky-top navbar-expand-lg navbar-light bg-white py-3"
+			>
+				<div class="container px-5">
+					<a class="navbar-brand" href="index.html"
+						><span class="fw-bolder text-primary">KARIM</span></a
+					>
+					<button
+						class="navbar-toggler"
+						type="button"
+						data-bs-toggle="collapse"
+						data-bs-target="#navbarSupportedContent"
+						aria-controls="navbarSupportedContent"
+						aria-expanded="false"
+						aria-label="Toggle navigation"
+					>
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
+							<li class="nav-item">
+								<a class="nav-link" href="index.html">Home</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="resume.html">Resume</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="projects.html">Projects</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="contact.html">Contact</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+
+			HOME PAGE SECTION WILL BE THERE
+		</main>
+		<!-- Footer-->
+		<footer class="bg-white py-4 mt-auto">
+			<div class="container px-5">
+				<div
+					class="row align-items-center justify-content-center flex-column flex-sm-row"
+				>
+					<div class="col-auto">
+						<div class="small m-0">Copyright &copy; Your Website 2025</div>
+					</div>
+				</div>
+			</div>
+		</footer>
+
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
